--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
     font-size: 16px; 
     line-height: 32px;
     font-family:Georgia, 'Times New Roman', Times, serif;
-    color:#0b6ab8;
+    color:#052b4b;
 }
 
 h1 {
